# utcn-fa

./: .gitignore  CMakeLists.txt  Makefile  README.md
common/: Profiler.h  catch2.hpp  commandline.h  console.h  util.h
lab00/: CMakeLists.txt  Makefile  Msvc.vcxproj  Msvc.vcxproj.filters  Readme.md  demo.cpp  demo.h  main.cpp
lab01/: CMakeLists.txt  Makefile  Msvc.vcxproj  Msvc.vcxproj.filters  Readme.md  direct_sort.cpp  direct_sort.h  main.cpp
lab02/: CMakeLists.txt  Msvc.sln  Msvc.vcxproj  Msvc.vcxproj.filters  Readme.md  heap.cpp  heap.h  main.cpp
lab03/: CMakeLists.txt  Msvc.vcxproj  Msvc.vcxproj.filters  Readme.md  main.cpp  quick_sort.cpp  quick_sort.h
lab04/: CMakeLists.txt  Readme.md  lab04.sln  lab04.vcxproj  main.cpp  merge_lists.cpp  merge_lists.h
lab05/: Readme.md  hash_table.cpp  hash_table.h  lab05.sln  lab05.vcxproj  main.cpp
lab06/: CMakeLists.txt  Makefile  Readme.md  lab06.vcxproj  lab06.vcxproj.filters  main.cpp  multiway.cpp  multiway.h
lab07/: CMakeLists.txt  Readme.md  lab07.sln  lab07.vcxproj  lab07.vcxproj.filters  main.cpp  order_statistics.cpp  order_statistics.h
lab08/: CMakeLists.txt  Makefile  Msvc.vcxproj  Msvc.vcxproj.filters  Readme.md  disjoint_sets.cpp  disjoint_sets.h  main.cpp
lab09/: Msvc.sln  Msvc.vcxproj  Msvc.vcxproj.filters  bfs.cpp  main.cpp
lab10/: Makefile  main.cpp
